# tower-cli

./: .editorconfig  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .sdkmanrc  DEVELOPMENT.md  HEADER.txt  LICENSE.txt  PHASE_6_PLAN.md  PYTHON_DEVELOPMENT.md  PYTHON_REWRITE_PROGRESS.md  README.md  SDK.md  USAGE.md  VERSION  VERSION-API  build.gradle  changelog.txt  gradle.properties  jreleaser.yml  pyproject.toml  settings.gradle  test_api.sh  tw
.claude/: README.md
.claude/skills/enrich-cli-help/: README.md  SKILL.md
.claude/skills/enrich-cli-help/references/: architecture-patterns.md  quality-standards.md
.github/: pull_request_template.md
.github/workflows/: build.yml  label-notifier.yml  lint-markdown.yml  python-tests.yml  rich-codex-screenshot.yml  security-submit-dependencies.yml  trigger-docs-release-update.yml
conf/: access-filter-file.json  caller-filter-file.json  jni-config.json  proxy-config.json  reflect-config.json  reflect-config_new.json  resource-config.json  serialization-config.json
docs/: Makefile  README.md  build.sh  cli-examples.json  cli-metadata-enriched.json  cli-metadata.json  mkdocs.yml  requirements.txt  seqera-api-latest-decorated.yaml
docs/overrides/: main.html
docs/overrides/assets/stylesheets/: fonts.css  overrides.css
docs/overrides/partials/: base.html  footer.html
docs/research/: 2026-01-12-orphaned-commands-analysis.md  cli-description-improvements-sample.md  cli-docs-style-guide.md  compute-envs-improvements.md  enrichment-gaps-analysis.md  extraction-analysis.md  extraction-complete.md  final-results.md  import-fix-results.md  manual-api-descriptions.md  nested-api-fields-fix-evidence.md  pattern-matching-fix-evidence.md  phase-3-expansion-complete.md  phase-3b-java-updates-evidence.md  post-fix-analysis.md
docs/scripts/: apply-descriptions.py  cli-to-api-mapping-extended.json  cli-to-api-mapping.json  enrich-cli-metadata.py  extract-cli-examples.py  extract-cli-metadata.py  improve-cli-descriptions.py  openapi-mapping-strategy.md  progress.md
gradle/: libs.versions.toml
src/main/resources/: logback.xml
src/seqera/: __init__.py  config.py  main.py
src/seqera/api/: client.py
src/seqera/commands/: completion.py  launch.py
src/seqera/commands/actions/: __init__.py
src/seqera/commands/collaborators/: __init__.py
src/seqera/commands/computeenvs/: __init__.py
src/seqera/commands/credentials/: __init__.py
src/seqera/commands/datalinks/: __init__.py
src/seqera/commands/datasets/: __init__.py
src/seqera/commands/info/: __init__.py
src/seqera/commands/labels/: __init__.py
src/seqera/commands/members/: __init__.py
src/seqera/commands/organizations/: __init__.py
src/seqera/commands/participants/: __init__.py
src/seqera/commands/pipelines/: __init__.py
src/seqera/commands/runs/: __init__.py
src/seqera/commands/secrets/: __init__.py
src/seqera/commands/studios/: __init__.py
src/seqera/commands/teams/: __init__.py
src/seqera/commands/workspaces/: __init__.py
src/seqera/exceptions/: __init__.py
src/seqera/models/: __init__.py  actions.py  base.py  collaborators.py  common.py  compute_envs.py  credentials.py  data_links.py  datasets.py  labels.py  members.py  organizations.py  participants.py  pipelines.py  runs.py  secrets.py  studios.py  teams.py  workspaces.py
src/seqera/responses/: __init__.py
src/seqera/responses/computeenvs/: __init__.py
src/seqera/sdk/: __init__.py  client.py
src/seqera/sdk/resources/: __init__.py  actions.py  base.py  collaborators.py  compute_envs.py  credentials.py  data_links.py  datasets.py  labels.py  members.py  organizations.py  participants.py  pipelines.py  runs.py  secrets.py  studios.py  teams.py  workspaces.py
src/seqera/utils/: output.py
src/test/resources/: junit-platform.properties
src/test/resources/runcmd/: cejson.json  compute_env_demo.json  compute_env_view.json  compute_env_view_aws_manual.json  compute_env_view_gls.json  compute_envs_list.json  credentials_list.json  labels_user.json  launch.json  launch_view.json  pipeline_launch_describe.json  pipelines_add.json  pipelines_add_commit_id.json  pipelines_add_no_workdir.json  pipelines_add_response.json  pipelines_create.json  pipelines_list.json  pipelines_multiple.json  pipelines_none.json  pipelines_sarek.json  pipelines_sleep.json  pipelines_update.json  user.json  workflow_launch.json  workflow_progress.json  workflow_relaunch.json  workflow_view.json  (+1 more)
tests/: conftest.py  test_info_cmd.py  test_launch_cmd.py
tests/actions/: test_actions_cmd.py
tests/collaborators/: test_collaborators_cmd.py
tests/computeenvs/: __init__.py  test_computeenvs_cmd.py
tests/credentials/: test_agent_provider.py  test_aws_provider.py  test_azure_provider.py  test_bitbucket_provider.py  test_codecommit_provider.py  test_container_registry_provider.py  test_credentials_cmd.py  test_gitea_provider.py  test_github_provider.py  test_gitlab_provider.py  test_google_provider.py  test_k8s_provider.py  test_ssh_provider.py
tests/datalinks/: __init__.py  test_datalinks_cmd.py
tests/datasets/: __init__.py  test_datasets_cmd.py
tests/labels/: __init__.py  test_labels_cmd.py
tests/members/: test_members_cmd.py
tests/organizations/: __init__.py  test_organizations_cmd.py
tests/participants/: test_participants_cmd.py
tests/pipelines/: test_pipelines_cmd.py
tests/resources/info/: service-info-obsolete.json  service-info.json
tests/resources/launch/: labels_user.json  pipeline_launch_describe.json  pipelines_none.json  pipelines_sarek.json
tests/resources/runs/: cpu.json  runs_metrics.json  runs_progress.json  runs_tasks.json  runs_view.json  task_detail_null_values.json  tasks_list_response.json  workflow_launch.json  workflow_list.json  workflow_view.json
tests/runs/: __init__.py  test_metrics_cmd.py  test_runs_cmd.py  test_tasks_cmd.py
tests/sdk/: test_client.py
tests/secrets/: __init__.py  test_secrets_cmd.py
tests/studios/: test_studios_cmd.py
tests/teams/: test_team_members_cmd.py  test_teams_cmd.py
tests/workspaces/: __init__.py  test_workspaces_cmd.py
(+763 files in other folders)
