[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seqera"
version = "0.2.0"
description = "Seqera Platform SDK and CLI - Python library and command-line interface"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Seqera", email = "hello@seqera.io"}
]
keywords = ["nextflow", "seqera", "platform", "cli", "sdk", "bioinformatics", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "rich-click>=1.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-httpserver>=1.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.8.0",
    "mypy>=1.5.0",
    "types-pyyaml>=6.0.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
seqera = "seqera.main:main"

[project.urls]
Homepage = "https://seqera.io"
Documentation = "https://docs.seqera.io"
Repository = "https://github.com/seqeralabs/tower-cli"
"Bug Tracker" = "https://github.com/seqeralabs/tower-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["seqera*"]

[tool.setuptools.package-data]
seqera = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # module level import not at top (needed for typer registration)
    "E722",  # bare except (used for safe date parsing fallbacks)
    "E741",  # ambiguous variable name (l used in list comprehensions)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from err (intentional for clean error messages)
    "C901",  # too complex
    "UP035", # deprecated typing imports (Dict/List - keep for compatibility)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
follow_imports = "silent"
strict_optional = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "seqera.responses.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "seqera.commands.computeenvs.platforms.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "seqera.commands.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "seqera.main"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
